# walking_simulator

./: .gitignore  CMakeLists.txt  main.cpp
res/models/: flower.mtl  stone2.mtl  tree1.mtl  tree3.mtl  trunk.mtl
res/shader/: fragment_3d.shader  fragment_ch.shader  fragment_hud.shader  vertex_3d.shader  vertex_ch.shader
src/: bodies_generator.h  game.cpp  game.h  game_loop.cpp  game_loop.h  materials.h  player.cpp  player.h  random_util.h  world.cpp  world.h
